fixed the current Matches navigation view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CurrentActivity"
+        <activity android:name=".CurrentMatchesFragment"
             android:parentActivityName=".MainActivity"
             android:label="Back"
             >
